day3/07_ingress/solution-nginx/python.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: trenersages.westeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/python(/|$)(.*)"
        backend:
          service:
            name: python-service
            port:
              number: 5002
